k8s-challenge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-challenge-deployment
  labels:
    app: k8s-challenge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-challenge
  template:
    metadata:
      labels:
        app: k8s-challenge
    spec:
      containers:
      - name: k8s-challenge
        image: k8s-challenge
        imagePullPolicy: Never
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-challenge-service
spec:
  selector:
    app: k8s-challenge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
