k8s-challenge-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-challenge-ingress
spec:
  rules:
  - host: k8s-challenge.com
    http:
      paths:
      - backend:
          serviceName: k8s-challenge-service
          servicePort: 4000
